--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,8 +10,8 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
-  }, 
-  "homepage": "https://github.com/joao-artl/Gotinha",
+  },
+  "homepage": "https://joao-artl.github.io/Gotinha/",
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
